--- a/_posts/2017-07-20-bitcoin.markdown
+++ b/_posts/2017-07-20-bitcoin.markdown
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Bitcoin : A Peer-to-Peer Electronic Cash System"
+title:  Paper Review: <Bitcoin : A Peer-to-Peer Electronic Cash System>
 date:   2017-07-20 18:00:00 +0900
 categories: blockchain
 ---
