--- a/_posts/2017-07-20-bitcoin.markdown
+++ b/_posts/2017-07-20-bitcoin.markdown
@@ -2,7 +2,7 @@
 layout: post
 title:  Paper Review: <Bitcoin : A Peer-to-Peer Electronic Cash System>
 date:   2017-07-20 18:00:00 +0900
-categories: blockchain
+categories: databases
 ---
 You’ll find this post in your `_posts` directory. Go ahead and edit it and re-build the site to see your changes. You can rebuild the site in many different ways, but the most common way is to run `jekyll serve`, which launches a web server and auto-regenerates your site when a file is updated.
 
